prevent sending messages when enter and shift are pressed

--- a/chat-app/src/components/MessageInput.css
+++ b/chat-app/src/components/MessageInput.css
@@ -1,12 +1,14 @@
 .messageInput {
   margin: 16px 8px;
   border: none;
-  /* padding: 10px; */
-  /* border: 1px solid var(--grey); */
-  border-radius: 16px;
+  padding: 12px 12px 0 12px;
+  border-radius: 24px;
   width: 90%;
+  height: 40px;
   background-color: var(--grey4);
-  /* background-color: var(--lightgrey); */
   color: var(--grey);
   font-weight: 600;
+  resize: none;
+  overflow-y: auto;
+  word-wrap: break-word;
 }
